Add test for primary broker changed case